# sigmagoon

./: .gitignore  Cargo.toml  README.md
cheats/hp/: Cargo.toml
cheats/hp/src/: lib.rs
cheats/money/: Cargo.toml
cheats/money/src/: lib.rs
cheats/speed/: Cargo.toml
cheats/speed/src/: lib.rs
memory/: Cargo.toml
memory/src/: error.rs  lib.rs  offsets.rs
sigmagoon/: Cargo.toml
sigmagoon/src/: injector.rs  main.rs  repl.rs
