[workspace]
members = ["cheats/hp", "cheats/money", "cheats/speed", "memory", "sigmagoon"]
resolver = "3"

[workspace.dependencies]
ilhook = "2.3.0"
thiserror = "2.0.18"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_Media",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_Security",
] }

# local
hp = { path = "cheats/hp/" }
money = { path = "cheats/money/" }
memory = { path = "memory/" }

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = 3
strip = true
codegen-units = 1
